Consolidate recent development - Minor code fixes - Tests added